/*
 * $Id: ChangeLog,v 1.900 2003/03/31 16:29:28 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-03-31 16:41 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    ! Minor fix to support of bPersistent in __CLSADDMS()

2003-03-31 11:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    + Added extern BOOL hb_clsIsParent( USHORT uiClass, char * szParentName ); as per FWH Author request.

2003-03-31 13:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    ! Fixed generation of Test.out in linux

2003-03-30 18:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * utils/hbmake/hbmake.prg
    utils/hbmake/hbmutils.prg
    * Minor fix under linux

2003-03-30 11:33 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    * Minor fix to __OBJSENDMSG() (By Jose F. Gimenez)

2003-03-29 20:00 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * makefile.bc
    makefile.vc
    source/Makefile
    ! updated to Build the new samples.lib and hbodbc.lib
  + Source/clipsamp/environ.c
  + Source/clipsamp/date.c
  + Source/clipsamp/dbf.c
  + Source/clipsamp/gauge.c
  + Source/clipsamp/num.c
  + Source/clipsamp/stack.c
  + Source/clipsamp/status.c
  + Source/clipsamp/time.c
  + Source/clipsamp/Makefile
    ! Source code to Build Clipper compatible samples.lib
  + Source/odbc/odbc.c
  + Source/odbc/todbc.prg
  + Source/odbc/sql.ch
  + Source/odbc/Makefile
  + Source/odbc/browodbc.prg
    ! Source code to Build hbodbc.lib library for odbc acess

2003-03-29 13:27 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
    * Removed BOOL bNoParent from hb_clsHasMsg() and replace it with logic to validate the scope of the message.

2003-03-29 18:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * include/hbgetcmt.ch
    ! Fix definition of Read command