@@ -1,5 +1,5 @@
 /*
- * $Id: odbc.c,v 1.14 2002/08/17 19:12:12 tomazzupan Exp $
+ * $Id: odbc.c,v 1.1 2003/03/29 22:38:10 lculik Exp $
  */
 
 /*
@@ -68,7 +68,7 @@
 #include "hbapi.h"
 #include "hbapiitm.h"
 #include "hbdefs.h"
- 
+
 #if defined(HB_OS_WIN_32)
    #include <windows.h>
 #endif
@@ -107,7 +107,7 @@ HB_FUNC( SQLDRIVERC ) /* HB_SQLDRIVERCONNECT( hDbc, @ cConnectString, lPrompt ) 
    #if defined(HB_OS_WIN_32)
       RETCODE ret =  SQLDriverConnect( ( HDBC ) hb_parnl( 1 ),
                              GetDesktopWindow(),
-                             hb_parc( 2 ), strlen(hb_parc(2)),
+                             (unsigned char *) hb_parc( 2 ), strlen(hb_parc(2)),
                              bBuffer1, 1024, &wLen, SQL_DRIVER_COMPLETE ) ;
    #elif defined(HB_OS_UNIX)
       RETCODE ret =  SQLDriverConnect( ( HDBC ) hb_parnl( 1 ),
@@ -116,18 +116,18 @@ HB_FUNC( SQLDRIVERC ) /* HB_SQLDRIVERCONNECT( hDbc, @ cConnectString, lPrompt ) 
                              bBuffer1, 1024, &wLen, SQL_DRIVER_COMPLETE ) ;
 
    #endif
-   hb_storc( bBuffer1 , 3 );
+   hb_storc( (char *) bBuffer1 , 3 );
    hb_retni( ret );
 }
 HB_FUNC( SQLCONNECT ) /* HB_SQLCONNECT( hDbc, @ cServerName, nNameLength1, @cUserName, nNameLength2, @cPassword, nNameLength3 ) --> nRetCode */
 {
       RETCODE ret =  SQLConnect( ( HDBC ) hb_parnl( 1 ),
-                             hb_parc( 2 ), 
-			     strlen(hb_parc(2)),
-                             hb_parc( 3 ), 
-			     strlen(hb_parc(3)),
-                             hb_parc( 4 ), 
-			     strlen(hb_parc(4)));
+                                 (unsigned char*) hb_parc( 2 ),
+                                 strlen( hb_parc(2) ),
+                                 (unsigned char*) hb_parc( 3 ),
+                                 strlen( hb_parc(3) ),
+                                 (unsigned char*) hb_parc( 4 ),
+                                 strlen( hb_parc(4) ) );
 
    hb_retni( ret );
 }
@@ -162,7 +162,7 @@ HB_FUNC( SQLFREESTM ) /* HB_SQLFREESTMT( hStmt, nType ) --> nRetCode */
 
 HB_FUNC( SQLEXECDIR )  /* HB_SQLEXECDIRECT( hStmt, cStatement ) --> nRetCode */
 {
-   hb_retni( SQLExecDirect( ( HSTMT ) hb_parnl( 1 ), hb_parc( 2 ), SQL_NTS ) );
+   hb_retni( SQLExecDirect( ( HSTMT ) hb_parnl( 1 ), (unsigned char*) hb_parc( 2 ), SQL_NTS ) );
 }
 
 HB_FUNC( SQLFETCH )   /* HB_SQLFETCH( hStmt ) --> nRetCode */
@@ -209,7 +209,7 @@ HB_FUNC( SQLDESCRIB )
     SQLSMALLINT wDecimals = hb_parni( 8 );
     SQLSMALLINT wNullable = hb_parni( 9 );
     WORD        wResult   = SQLDescribeCol( ( HSTMT ) hb_parnl( 1 ), hb_parni( 2 ),
-                                            ( PTR ) bBuffer, hb_parni( 4 ), &wBufLen,
+                                            (unsigned char*) bBuffer, hb_parni( 4 ), &wBufLen,
                                             &wDataType, &wColSize, &wDecimals,
                                             &wNullable );
 
@@ -261,20 +261,20 @@ HB_FUNC( SQLERROR ) //  hEnv, hDbc, hStmt, @ cErrorClass, @ nType, @ cErrorMsg
    SWORD wLen;
 
    hb_retni( SQLError( ( HENV ) hb_parnl( 1 ), ( HDBC ) hb_parnl( 2 ),
-                       ( HSTMT ) hb_parnl( 3 ), bBuffer1, &lError,
+                       ( HSTMT ) hb_parnl( 3 ), bBuffer1, (long *) &lError,
                        szErrorMsg, 256, &wLen ) );
 
-   hb_storc( bBuffer1, 4 );
+   hb_storc( (char *) bBuffer1, 4 );
    hb_stornl( lError, 5 );
-   hb_storc( szErrorMsg, 6 );
+   hb_storc( (char *) szErrorMsg, 6 );
 }
 
 HB_FUNC( SQLROWCOUN )
 {
     SQLUINTEGER  uiRowCountPtr = hb_parni( 2 );
     WORD         wResult       = SQLRowCount( ( HSTMT ) hb_parnl( 1 ),
-                                              &uiRowCountPtr );
-					      
+                                              (long *) &uiRowCountPtr );
+
     if( wResult == SQL_SUCCESS || wResult == SQL_SUCCESS_WITH_INFO )
     {
        hb_stornl( ( LONG ) uiRowCountPtr, 2 );
